headless_enable_commands = false
headless_use_embedded_resources = true

# Enable proprietary codecs such as H.264
ffmpeg_branding = "Chrome"
proprietary_codecs = true

# Disable unused features
enable_pdf = false
enable_nacl = false
enable_ppapi = false
enable_plugins = false
enable_rust_json = false
enable_tagged_pdf = false
enable_media_remoting = false
enable_speech_service = false
enable_component_updater = false
enable_screen_ai_service = false
enable_system_notifications = false
enable_browser_speech_service = false
enable_webui_certificate_viewer = false
